updates to pass build check, moved intro from vignettes

--- a/lts_demos/Intro.Rmd
+++ b/lts_demos/Intro.Rmd
@@ -3,17 +3,16 @@ title: "Intro"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Intro}
-  %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
 ```{r, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>"
-)
+# knitr::opts_chunk$set(
+#   collapse = TRUE,
+#   comment = "#>"
+# )
 ```
 
 ```{r setup}
-library(lifeTimes)
+# library(lifeTimes)
 ```
